minor adjustments uploaded complete

--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -604,8 +604,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python_defaultSpec_1593827000517",
-   "display_name": "Python 3.7.7 64-bit"
+   "name": "python_defaultSpec_1593839421890",
+   "display_name": "Python 3.7.7 64-bit ('PythonData1': conda)"
   }
  },
  "nbformat": 4,
